# Laboratoire-Chrono

./: CMakeLists.txt  main.cpp  readme.md
Fonctions/Generateur/: generateur.cpp  generateur.h
Fonctions/Minuteur/: minuteur.cpp  minuteur.h
Fonctions/Saisie/: saisie.cpp  saisie.h
Fonctions/Temps/: temps.cpp  temps.h
